compiler/tests/ar/errors/pure_vec_mut_ar.salam
// لغة: العربية
// EXPECT: E012
نقي دالة املأ(n : صحيح) : صحيح:
    متغير v : Vector<صحيح> = Vector {}
    v.push(n)
    أرجع v.len()
نهاية

دالة الرئيسية:
    اطبع(املأ(3))
نهاية
